--- a/package.json
+++ b/package.json
@@ -2,8 +2,19 @@
   "name": "soft_work",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^6.7.7",
+    "babel-preset-env": "^1.2.2",
+    "compression-webpack-plugin": "^0.3.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "js-yaml": "^3.8.2",
+    "node-sass": "^4.5.1",
+    "postcss-smart-import": "^0.6.10",
+    "precss": "^1.4.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "sass-loader": "^6.0.3",
+    "webpack-manifest-plugin": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
