--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "dependencies": {
     "autoprefixer": "^6.7.7",
     "babel-preset-env": "^1.2.2",
-    "boostrap": "3.3.7",
-    "css-loader": "^0.23.1",
     "compression-webpack-plugin": "^0.3.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
@@ -16,9 +14,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "sass-loader": "^6.0.3",
-    "style-loader": "^0.13.1",
-    "webpack-manifest-plugin": "^1.1.0",
-    "url-loader": "^0.5.7"
+    "webpack-manifest-plugin": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
@@ -35,7 +31,7 @@
     "postcss-loader": "^1.3.3",
     "rails-erb-loader": "^3.2.0",
     "react-hot-loader": "^1.3.1",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.16.0",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
