--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss-smart-import": "^0.6.10",
     "precss": "^1.4.0",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "sass-loader": "^6.0.3",
     "webpack-manifest-plugin": "^1.1.0"
