--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "js-yaml": "^3.8.2",
+    "material-ui": "^0.17.1",
     "node-sass": "^4.5.1",
     "postcss-smart-import": "^0.6.10",
     "precss": "^1.4.0",
