--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "precss": "^1.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-tap-event-plugin": "^2.0.1",
     "sass-loader": "^6.0.3",
     "webpack-manifest-plugin": "^1.1.0"
   },
