--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "dependencies": {
     "autoprefixer": "^6.7.7",
     "babel-preset-env": "^1.2.2",
+    "bootstrap-loader": "^2.0.0",
+    "bootstrap-sass": "^3.3.7",
     "compression-webpack-plugin": "^0.3.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "import-loader": "^1.0.1",
     "js-yaml": "^3.8.2",
     "material-ui": "^0.17.1",
     "node-sass": "^4.5.1",
@@ -17,11 +20,14 @@
     "react-mounter": "^1.2.0",
     "react-router": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
+    "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.3",
     "superagent": "^3.5.2",
     "superagent-no-cache": "^0.1.1",
+    "url-loader": "^0.5.8",
     "webpack-manifest-plugin": "^1.1.0",
-    "zone.js": "^0.8.5"
+    "zone.js": "^0.8.5",
+    "bootstrap": "3.3.7"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
@@ -33,6 +39,7 @@
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.4",
     "css-loader": "^0.27.3",
+    "exports-loader": "^0.6.4",
     "glob": "^7.1.1",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^1.3.3",
