--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^6.7.7",
-    "babel-preset-env": "^1.2.2",
+    "babel-preset-env": "^1.4.0",
     "bootstrap-loader": "^2.0.0",
     "bootstrap-sass": "^3.3.7",
-    "compression-webpack-plugin": "^0.3.2",
+    "compression-webpack-plugin": "^0.4.0",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.1",
     "import-loader": "^1.0.1",
-    "js-yaml": "^3.8.2",
+    "js-yaml": "^3.8.3",
     "material-ui": "^0.17.1",
-    "node-sass": "^4.5.1",
-    "postcss-smart-import": "^0.6.10",
+    "node-sass": "^4.5.2",
+    "postcss-smart-import": "^0.6.11",
     "precss": "^1.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -29,23 +29,24 @@
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "babel-core": "^6.24.0",
+    "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-latest": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "coffee-loader": "^0.7.3",
-    "coffee-script": "^1.12.4",
-    "css-loader": "^0.27.3",
+    "coffee-script": "^1.12.5",
+    "css-loader": "^0.28.0",
     "exports-loader": "^0.6.4",
     "glob": "^7.1.1",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^1.3.3",
-    "rails-erb-loader": "^3.2.0",
+    "rails-erb-loader": "^5.0.0",
     "react-hot-loader": "^1.3.1",
-    "style-loader": "^0.16.0",
-    "webpack": "^2.3.2",
+    "react-router-dom": "^4.1.1",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
   }
